--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,7 +1,7 @@
-$bgDefault      : $orange;
-$bgHighlight    : #ca5930;
-$colDefault     : $white;
-$colHighlight   : $white;
+$bgDefault      : $ltgrey;
+$bgHighlight    : $white;
+$colDefault     : $orange;
+$colHighlight   : $orange;
 $dropDown       : true;
 .navbar-right{
     margin-right:15px
