--- a/sass/app.css
+++ b/sass/app.css
@@ -75,63 +75,63 @@ button.register {
   font-size: 14px;
   padding-top: 25px;
   padding-bottom: 25px;
-  background-color: #f1f1f1;
-  border-color: #FFF;
+  background-color: #d95c2e;
+  border-color: #ca5930;
   border-radius: 0;
   margin-bottom: 0; }
   .navbar-default .navbar-brand {
     padding-top: 0;
     padding-left: 35px;
-    color: #d95c2e; }
+    color: #FFF; }
     .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-      color: #d95c2e; }
+      color: #FFF; }
   .navbar-default .navbar-text {
-    color: #d95c2e; }
+    color: #FFF; }
   .navbar-default .navbar-nav > li > a {
     text-transform: uppercase;
-    color: #d95c2e; }
+    color: #FFF; }
     .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-      color: #d95c2e; }
+      color: #FFF; }
   .navbar-default .navbar-nav > li > .dropdown-menu {
-    background-color: #f1f1f1; }
+    background-color: #d95c2e; }
     .navbar-default .navbar-nav > li > .dropdown-menu > li > a {
-      color: #d95c2e; }
+      color: #FFF; }
       .navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover, .navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
-        color: #d95c2e;
-        background-color: #FFF; }
+        color: #FFF;
+        background-color: #ca5930; }
     .navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
-      background-color: #FFF; }
+      background-color: #ca5930; }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #d95c2e;
-    background-color: #FFF; }
+    color: #FFF;
+    background-color: #ca5930; }
   .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-    color: #d95c2e;
-    background-color: #FFF; }
+    color: #FFF;
+    background-color: #ca5930; }
   .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-    color: #d95c2e;
-    background-color: #FFF; }
+    color: #FFF;
+    background-color: #ca5930; }
   .navbar-default .navbar-toggle {
-    border-color: #FFF; }
+    border-color: #ca5930; }
     .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-      background-color: #FFF; }
+      background-color: #ca5930; }
     .navbar-default .navbar-toggle .icon-bar {
-      background-color: #d95c2e; }
+      background-color: #FFF; }
   .navbar-default .navbar-collapse,
   .navbar-default .navbar-form {
-    border-color: #d95c2e; }
+    border-color: #FFF; }
   .navbar-default .navbar-link {
-    color: #d95c2e; }
+    color: #FFF; }
     .navbar-default .navbar-link:hover {
-      color: #d95c2e; }
+      color: #FFF; }
 
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #d95c2e; }
+    color: #FFF; }
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-      color: #d95c2e; }
+      color: #FFF; }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #d95c2e;
-    background-color: #FFF; } }
+    color: #FFF;
+    background-color: #ca5930; } }
 html {
   margin-top: 101px; }
 
@@ -465,7 +465,8 @@ footer {
 /* Custom, iPhone Retina */
 @media only screen and (min-width: 320px) {
   a.navbar-brand {
-    padding-left: 15px !important; }
+    padding-left: 15px !important;
+    padding-top: 5px !important; }
 
   section#intro h2 {
     padding-top: 20px;
@@ -624,3 +625,5 @@ footer {
 /* Small Devices, Tablets */
 /* Extra Small Devices, Phones */
 /* Custom, iPhone Retina */
+
+/*# sourceMappingURL=app.css.map */
